--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  sqflite: ^2.3.0
+  path: ^1.8.3
   firebase_core: ^3.13.1
   firebase_auth: ^5.5.4
  
